--- a/Server.csproj
+++ b/Server.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MySql.Data" Version="8.0.23" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="RoyT.AStar" Version="2.1.0" />
+    <PackageReference Include="VideoLibrary" Version="3.1.0" />
   </ItemGroup>
 
 </Project>
